--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <img src="assets/images/logo_mcl_red.jpg" alt="Logo MCL">
                 </a>
                 <ul class="nav-links">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="services.html">Servizi</a></li>
-                    <li><a href="about.html">Chi siamo</a></li>
-                    <li><a href="contact.html">Contatti</a></li>
-                    <li><a href="services.html">Circoli</a></li>
+                    <li><a href="./index.html" class="active">Home</a></li>
+                    <li><a href="./about.html">Chi siamo</a></li>
+                    <li><a href="./services.html">Servizi</a></li>
+                    <li><a href="./circoli.html">Circoli</a></li>
+                    <li><a href="./contact.html">Contatti</a></li>
                 </ul>
                 <button class="menu-toggle">☰</button>
             </div>
@@ -40,45 +40,87 @@
 
     <main>
         <section class="hero">
-            <div class="hero-slide active" style="background-image: url('https://via.placeholder.com/1920x600/cccccc/808080?text=Hero+Image+1');">
+            <div class="hero-slide active" style="background-image: url('assets/images/slideshow_730.jpg');">
                 <div class="hero-content">
-                    <h1>A Community You Can Rely On</h1>
-                    <p>Providing essential services and support for our members.</p>
-                    <a href="services.html" class="btn">Explore Our Services</a>
+                    <h1><span style="background-color: #add8e6; color: #0d47a1;">730/2025? Eccoci!</span></h1>
+                    <p><span style="background-color: #add8e6; color: #0d47a1;">Prenota un appuntamento con noi</span></p>
+                </div>
+            </div>
+            <div class="hero-slide" style="background-image: url('assets/images/slideshow_isee.jpg');">
+                <div class="hero-content">
+                    <h1><span style="background-color: #add8e6; color: #0d47a1;">ISEE / DSU anno 2025</span></h1>
+                    <p><span style="background-color: #add8e6; color: #0d47a1;">Consultaci per un supporto</span></p>
+                </div>
+            </div>
+            <div class="hero-slide" style="background-image: url('assets/images/slideshow_colf.jpg');">
+                <div class="hero-content">
+                    <h1><span style="background-color: #add8e6; color: #0d47a1;">Servizi COLF e badanti</span></h1>
+                    <p><span style="background-color: #add8e6; color: #0d47a1;">Siamo a disposizione per aiutarti</span></p>
+                </div>
+            </div>
+            <div class="hero-slide" style="background-image: url('assets/images/slideshow_successioni.jpg');">
+                <div class="hero-content">
+                    <h1><span style="background-color: #add8e6; color: #0d47a1;">Dichiarazione di successione</span></h1>
+                    <p><span style="background-color: #add8e6; color: #0d47a1;">Siamo al tuo fianco per darti una mano</span></p>
+                </div>
+            </div>
+            <div class="hero-slide" style="background-image: url('assets/images/slideshow_condominio.jpg');">
+                <div class="hero-content">
+                    <h1><span style="background-color: #add8e6; color: #0d47a1;">Amministrazione di condominio</span></h1>
+                    <p><span style="background-color: #add8e6; color: #0d47a1;">Contattaci per gestire il tuo condominio</span></p>
+                </div>
+            </div>
+            <div class="hero-slide" style="background-image: url('assets/images/slideshow_sostegno.jpg');">
+                <div class="hero-content">
+                    <h1><span style="background-color: #add8e6; color: #0d47a1;">Ricorso per amministratore di sostegno</span></h1>
+                    <p><span style="background-color: #add8e6; color: #0d47a1;">Non esitare a contattarci</span></p>
                 </div>
             </div>
             <!-- Add more slides here if needed -->
+            <div class="slider-dots">
+            </div>
         </section>
 
         <section class="services-grid">
             <div class="container">
-                <h2>Our Core Services</h2>
+                <hr>
                 <div class="grid-container">
                     <div class="grid-item">
-                        <div class="icon-placeholder">🏢</div>
-                        <h3>Service One</h3>
-                        <p>Description of the first key service your organization provides.</p>
-                        <a href="services.html" class="learn-more">Learn More →</a>
-                    </div>
-                    <div class="grid-item">
                         <div class="icon-placeholder">🤝</div>
-                        <h3>Service Two</h3>
-                        <p>Description of the second key service your organization provides.</p>
-                        <a href="services.html" class="learn-more">Learn More →</a>
+                        <h3>Chi siamo</h3>
+                        <p style="text-align: justify;">Il <b>Movimento Cristiano Lavoratori</b> - <b>M.C.L.</b> - è un Movimento di lavoratori cristiani, a carattere sociale, di solidarietà e volontariato senza alcuna finalità di lucro. Promuoviamo l’affermazione dei principi cristiani nella vita, nella cultura, negli ordinamenti e nella legislazione.</p>
+                        <a href="services.html" class="learn-more">Ulteriori informazioni →</a>
                     </div>
                     <div class="grid-item">
                         <div class="icon-placeholder">💼</div>
-                        <h3>Service Three</h3>
-                        <p>Description of the third key service your organization provides.</p>
-                        <a href="services.html" class="learn-more">Learn More →</a>
+                        <h3>Servizi</h3>
+                        <p>
+                            <ul style="text-align: left;">
+                                <li style="color: rgb(6, 116, 6);">CAF - Modello 730</li>
+                                <li style="color: rgb(6, 116, 6);">CAF - Modello Isee</li>
+                                <li style="color: rgb(9, 52, 145);">Colf e badanti</li>
+                                <li style="color: rgb(9, 52, 145);">Amministrazione di condominio</li>
+                                <li style="color: rgb(9, 52, 145);">Dichiarazioni di successione</li>
+                                <li style="color: rgb(139, 9, 9);">Ricorso per Amministratore di sostegno</li>
+                                <li style="color: rgb(139, 9, 9);">Consulenza legale</li>
+                                <li style="color: rgb(139, 9, 9);">Gestione sito web per piccole imprese</li>
+                            </ul>
+                        </p>
+                        <a href="services.html" class="learn-more">Ulteriori informazioni →</a>
+                    </div>
+                    <div class="grid-item">
+                        <div class="icon-placeholder">🏢</div>
+                        <h3>Circoli</h3>
+                        <p>Lista dei circoli.</p>
+                        <a href="services.html" class="learn-more">Ulteriori informazioni →</a>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="news-preview">
+        <!-- <section class="news-preview">
             <div class="container">
-                <h2>Latest News</h2>
+                <h2>Eventi</h2>
                 <div class="news-container">
                     <article class="news-card">
                         <img src="https://via.placeholder.com/400x250/cccccc/808080?text=News+Image" alt="News Image">
@@ -100,30 +142,31 @@
                     </article>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer>
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h4>About Us</h4>
-                    <p>Your Organization is dedicated to serving the community with integrity and passion. We've been active since 1990.</p>
+                    <h4>Chi siamo</h4>
+                    <p>Il <b>Movimento Cristiano Lavoratori</b> - <b>M.C.L.</b> - è un Movimento di lavoratori cristiani, a carattere sociale, di solidarietà e volontariato senza alcuna finalità di lucro.</p>
                 </div>
                 <div class="footer-col">
-                    <h4>Quick Links</h4>
+                    <h4>Links utili</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="services.html">Services</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">Chi siamo</a></li>
+                        <li><a href="./services.html">Servizi</a></li>
+                        <li><a href="./circoli.html">Circoli</a></li>
+                        <li><a href="./contact.html">Contatti</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Contact</h4>
-                    <p>123 Main Street<br>Anytown, USA 12345</p>
-                    <p>Email: info@yourorg.com</p>
-                    <p>Phone: (123) 456-7890</p>
+                    <h4>Contatti</h4>
+                    <p>Via Vescovato 18<br>Crema (CR) 26013 - Italia</p>
+                    <p>Email: segreteria@mclcrema.it</p>
+                    <p>Telefono: 0373 259568</p>
                 </div>
             </div>
             <div class="footer-bottom">
