--- a/services.html
+++ b/services.html
@@ -3,13 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services | Your Organization Name</title>
+    <title>Movimento Cristiano Lavoratori | Servizi</title>
+    <link rel="icon" type="image/png" href="assets/images/thumb.png">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
     <header>
-        <!-- Same header as other pages -->
+        <div class="top-bar">
+            <div class="container top-bar-flex">
+                <div class="top-bar-left">
+                    <span>Movimento Cristiano Lavoratori - Sede provinciale di Crema</span>
+                </div>
+                <div class="top-bar-right">
+                    <span class="top-bar-phone">Telefono: 0373 259568</span>
+                    <span class="top-bar-email">Email: segreteria@mclcrema.it</span>
+                </div>
+            </div>
+        </div>
+        <nav class="main-nav">
+            <div class="container">
+                <a href="index.html" class="logo">
+                    <img src="assets/images/logo_mcl_red.jpg" alt="Logo MCL">
+                </a>
+                <ul class="nav-links">
+                    <li><a href="./index.html" class="active">Home</a></li>
+                    <li><a href="./about.html">Chi siamo</a></li>
+                    <li><a href="./services.html">Servizi</a></li>
+                    <li><a href="./circoli.html">Circoli</a></li>
+                    <li><a href="./contact.html">Contatti</a></li>
+                </ul>
+                <button class="menu-toggle">☰</button>
+            </div>
+        </nav>
     </header>
 
     <main class="page-content">
@@ -47,7 +73,33 @@
     </main>
 
     <footer>
-        <!-- Same footer as other pages -->
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <h4>Chi siamo</h4>
+                    <p>Il <b>Movimento Cristiano Lavoratori</b> - <b>M.C.L.</b> - è un Movimento di lavoratori cristiani, a carattere sociale, di solidarietà e volontariato senza alcuna finalità di lucro.</p>
+                </div>
+                <div class="footer-col">
+                    <h4>Links utili</h4>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">Chi siamo</a></li>
+                        <li><a href="./services.html">Servizi</a></li>
+                        <li><a href="./circoli.html">Circoli</a></li>
+                        <li><a href="./contact.html">Contatti</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Contatti</h4>
+                    <p>Via Vescovato 18<br>Crema (CR) 26013 - Italia</p>
+                    <p>Email: segreteria@mclcrema.it</p>
+                    <p>Telefono: 0373 259568</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2025 MCL Crema. All Rights Reserved.</p>
+            </div>
+        </div>
     </footer>
     
     <script src="assets/js/script.js"></script>
