set other pages

--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
                     <img src="assets/images/logo_mcl_red.jpg" alt="Logo MCL">
                 </a>
                 <ul class="nav-links">
-                    <li><a href="./index.html" class="active">Home</a></li>
-                    <li><a href="./about.html">Chi siamo</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html" class="active">Chi siamo</a></li>
                     <li><a href="./services.html">Servizi</a></li>
                     <li><a href="./circoli.html">Circoli</a></li>
                     <li><a href="./contact.html">Contatti</a></li>
@@ -40,17 +40,41 @@
 
     <main class="page-content">
         <div class="container">
-            <h1>Our Story and Mission</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat.</p>
-            <img src="https://via.placeholder.com/800x400/cccccc/808080?text=Our+Team+or+Building" alt="About us image" style="width:100%; height:auto; margin: 2rem 0;">
-            <h2>Our Values</h2>
-            <p>Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh.</p>
+            <h1>Chi siamo</h1>
+            <p style="text-align: justify;">Il <b>Movimento Cristiano Lavoratori</b> - <b>M.C.L.</b> - è un Movimento di lavoratori cristiani, a carattere sociale, di solidarietà e volontariato senza alcuna finalità di lucro.<br> Promuoviamo l’affermazione dei principi cristiani nella vita, nella cultura, negli ordinamenti e nella legislazione. Applichiamo la Dottrina Sociale della Chiesa secondo l’insegnamento del suo Magistero, affinché sussistano le fondamenta per un rinnovato ordinamento sociale in cui siano assicurati, secondo giustizia, il riconoscimento dei diritti e la soddisfazione delle esigenze spirituali e materiali dei lavoratori.</p>
+            <div class="container" style="text-align: center;">
+                <img src="./assets/images/chi_siamo.jpg" alt="About us image" class="img-chi-siamo">
+            </div>
+            <h2>I nostri principi</h2>
+            <p><b>I nostri principi si basano:</b></p>
             <ul>
-                <li><strong>Community:</strong> We believe in the power of connection.</li>
-                <li><strong>Integrity:</strong> We operate with transparency and honesty.</li>
-                <li><strong>Service:</strong> We are dedicated to providing the best support.</li>
+                <li>sull'insegnamento della Chiesa in campo sociale e sulle istanze pastorali della Comunità Ecclesiale, affinché i sui militanti si impegnino ad una coerente assunzione di responsabilità, sia personale che di gruppo, in particolare nel mondo del lavoro;</li>
+                <li>sui valori della democrazia, intesa come scelta civile permanente per la costruzione di una rinnovata società pluralistica, fondata sulla dignità della persona e sulla giustizia sociale, nel quadro della più ampia solidarietà con le componenti della società civile;</li>
+                <li>sul fine ultimo di portare la società ad uno sviluppo, espresso in un solidale impegno comunitario, che attraverso il riconoscimento dei diritti del lavoro porti all'affermazione della pienezza della libertà umana;</li>
+                <li>sui valori della convivenza pacifica tra i popoli e della solidarietà tra loro.</li>
             </ul>
+            <p>E' per questi motivi che possono far parte del Movimento Cristiano Lavoratori , tutti i lavoratori, anche stranieri, ed i loro familiari anche di minore età, che accettino i principi, gli scopi e le norme dello statuto.</p>
+            <p>Gli <b>scopi principali del Movimento Cristiano Lavoratori </b> sono :</p>
+            <ul>
+                <li><b>Curare</b> la formazione culturale, religiosa, morale e sociale dei lavoratori, formandoli alla testimonianza cristiana e ad un coerente impegno negli ambienti di vita e di lavoro;</li>
+                <li><b>Tutelare</b> e promuovere i diritti delle famiglie dei lavoratori affermandone la soggettività sociale;</li>
+                <li><b>Perseguire</b> un'azione di orientamento dell'opinione pubblica e di stimolo degli organi responsabili della vita del paese e di ogni altro organismo interessante il mondo dei lavoratori anche a livello internazionale.</li>
+            </ul>
+        
+
+            <div class="service-list">
+                <div class="service-item">
+                    <img src="./assets/images/chi_siamo_aderisci.jpg" alt="Aderisci al movimento" class="img-chi-siamo">
+                    <div class="service-description">
+                        <h3>Aderisci anche tu!</h3>
+                        <p><b>Chi può far parte del Movimento Cristiano Lavoratori?</b></p>
+                        <p>Tutti i lavoratori, anche stranieri, ed i loro familiari anche di minore età, che accettino i principi, gli scopi e le norme dello statuto.</p>
+                        <a href="https://www.mcl.it/Il-Movimento/Statuto" class="btn">Statuto</a>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </main>
 
     <footer>
