--- a/circoli.html
+++ b/circoli.html
@@ -27,10 +27,10 @@
                     <img src="assets/images/logo_mcl_red.jpg" alt="Logo MCL">
                 </a>
                 <ul class="nav-links">
-                    <li><a href="./index.html" class="active">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">Chi siamo</a></li>
                     <li><a href="./services.html">Servizi</a></li>
-                    <li><a href="./circoli.html">Circoli</a></li>
+                    <li><a href="./circoli.html" class="active">Circoli</a></li>
                     <li><a href="./contact.html">Contatti</a></li>
                 </ul>
                 <button class="menu-toggle">☰</button>
@@ -43,35 +43,11 @@
         <section class="services-grid">
             <div class="container">
                 <hr>
-                <div class="grid-container">
-                    <div class="grid-item">
-                        <div class="icon-placeholder">🤝</div>
-                        <h3>Chi siamo</h3>
-                        <p style="text-align: justify;">Il <b>Movimento Cristiano Lavoratori</b> - <b>M.C.L.</b> - è un Movimento di lavoratori cristiani, a carattere sociale, di solidarietà e volontariato senza alcuna finalità di lucro. Promuoviamo l’affermazione dei principi cristiani nella vita, nella cultura, negli ordinamenti e nella legislazione.</p>
-                        <a href="services.html" class="learn-more">Ulteriori informazioni →</a>
-                    </div>
-                    <div class="grid-item">
-                        <div class="icon-placeholder">💼</div>
-                        <h3>Servizi</h3>
-                        <p>
-                            <ul style="text-align: left;">
-                                <li style="color: rgb(6, 116, 6);">CAF - Modello 730</li>
-                                <li style="color: rgb(6, 116, 6);">CAF - Modello Isee</li>
-                                <li style="color: rgb(9, 52, 145);">Colf e badanti</li>
-                                <li style="color: rgb(9, 52, 145);">Amministrazione di condominio</li>
-                                <li style="color: rgb(9, 52, 145);">Dichiarazioni di successione</li>
-                                <li style="color: rgb(139, 9, 9);">Ricorso per Amministratore di sostegno</li>
-                                <li style="color: rgb(139, 9, 9);">Consulenza legale</li>
-                                <li style="color: rgb(139, 9, 9);">Gestione sito web per piccole imprese</li>
-                            </ul>
-                        </p>
-                        <a href="services.html" class="learn-more">Ulteriori informazioni →</a>
-                    </div>
+                <div class="grid-container-circoli">
                     <div class="grid-item">
                         <div class="icon-placeholder">🏢</div>
                         <h3>Circoli</h3>
                         <p>Lista dei circoli.</p>
-                        <a href="services.html" class="learn-more">Ulteriori informazioni →</a>
                     </div>
                 </div>
             </div>
