--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="icon-placeholder">🏢</div>
                         <h3>Circoli</h3>
                         <p>Lista dei circoli.</p>
-                        <a href="services.html" class="learn-more">Ulteriori informazioni →</a>
+                        <a href="circoli.html" class="learn-more">Ulteriori informazioni →</a>
                     </div>
                 </div>
             </div>
