--- a/services.html
+++ b/services.html
@@ -27,9 +27,9 @@
                     <img src="assets/images/logo_mcl_red.jpg" alt="Logo MCL">
                 </a>
                 <ul class="nav-links">
-                    <li><a href="./index.html" class="active">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="./about.html">Chi siamo</a></li>
-                    <li><a href="./services.html">Servizi</a></li>
+                    <li><a href="./services.html" class="active">Servizi</a></li>
                     <li><a href="./circoli.html">Circoli</a></li>
                     <li><a href="./contact.html">Contatti</a></li>
                 </ul>
@@ -40,32 +40,58 @@
 
     <main class="page-content">
         <div class="container">
-            <h1>What We Offer</h1>
-            <p>We provide a wide range of services designed to meet the needs of our community. Explore our offerings below.</p>
+            <h1>I nostri servizi</h1>
+            <p>Forniamo un ampio perimetro di servizi, disegnati per incontrare i bisogni della comunità.</p>
             
             <div class="service-list">
                 <div class="service-item">
-                    <img src="https://via.placeholder.com/300x200/cccccc/808080?text=Service+1" alt="Service 1">
+                    <img src="./assets/images/servizi_caf.jpg" alt="Servizi CAF">
                     <div class="service-description">
-                        <h3>Service One: Detailed View</h3>
-                        <p>This is a more detailed description of the first service. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
-                        <a href="#" class="btn">Learn More</a>
+                        <h3>CAF</h3>
+                        <p>Il servizio CAF (Centro Assistenza Fiscale) comprende:
+                            <ul>
+                                <li>Modello 730</li>
+                                <li>Modello Isee</li>
+                            </ul>
+                        </p>
+                        <a href="#" class="btn">Dettagli</a>
                     </div>
                 </div>
                 <div class="service-item">
-                    <img src="https://via.placeholder.com/300x200/cccccc/808080?text=Service+2" alt="Service 2">
+                    <img src="./assets/images/servizi_assistenza.jpg" alt="Service 2">
                     <div class="service-description">
-                        <h3>Service Two: Detailed View</h3>
-                        <p>This is a more detailed description of the second service. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie.</p>
-                        <a href="#" class="btn">Learn More</a>
+                        <h3>Assistenza</h3>
+                        <p>Forniamo assistenza per:
+                            <ul>
+                                <li>Colf e badanti</li>
+                                <li>Amministrazione di condominio</li>
+                                <li>Pratiche catastali</li>
+                            </ul>
+                        </p>
+                        <a href="#" class="btn">Dettagli</a>
                     </div>
                 </div>
-                 <div class="service-item">
-                    <img src="https://via.placeholder.com/300x200/cccccc/808080?text=Service+3" alt="Service 3">
+                <div class="service-item">
+                    <img src="./assets/images/servizi_consulenza_legale.jpg" alt="Service 3">
                     <div class="service-description">
-                        <h3>Service Three: Detailed View</h3>
-                        <p>This is a more detailed description of the third service. Enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim.</p>
-                        <a href="#" class="btn">Learn More</a>
+                        <h3>Consulenza legale</h3>
+                        <p>Siamo al tuo fianco per assisterti nei seguenti aspetti legali:
+                            <ul>
+                                <li>Dichiarazione di successione</li>
+                                <li>Ricorso per amministratore di sostegno</li>
+                            </ul>
+                        </p>
+                        <a href="#" class="btn">Dettagli</a>
+                    </div>
+                </div>
+                <div class="service-item">
+                    <img src="./assets/images/servizi_consulenza_tech.jpg" alt="Service 3">
+                    <div class="service-description">
+                        <h3>Consulenza tecnologica</h3>
+                        <p>Siamo al tuo fianco per aiutarti a portare online la tua impresa. <br>
+                        Forniamo un servizio di gestione del sito web della tua azienda.
+                        </p>
+                        <a href="#" class="btn">Dettagli</a>
                     </div>
                 </div>
             </div>
