--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                     <div class="grid-item">
                         <div class="icon-placeholder">🏢</div>
                         <h3>Circoli</h3>
-                        <p>Lista dei circoli.</p>
+                        <p style="text-align: justify;">Potete trovarci a: Crema, Lodi, Cremona, Bagnolo Cremasco, Capralba, Offanengo, Ripalta Guerina, Romanengo, Spino d'Adda, Vaiano Cremasco, Casale Cremasco e San Colombano
+                        </p>
                         <a href="circoli.html" class="learn-more">Ulteriori informazioni →</a>
                     </div>
                 </div>
