--- a/circoli.html
+++ b/circoli.html
@@ -6,14 +6,12 @@
     <title>Movimento Cristiano Lavoratori | Home</title>
     <link rel="icon" type="image/png" href="assets/images/thumb.png">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="p4NxAoJBhfR57tMsaGDYhFxQzRPCH/K7X30Hn5pFg4o="
-    crossorigin=""/>
+    integrity="p4NxAoJBhfR57tMsaGDYhFxQzRPCH/K7X30Hn5pFg4o=">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="p4NxAoJBhfR57tMsaGDYhFxQzRPCH/K7X30Hn5pFg4o="
-    crossorigin=""></script>
+    integrity="p4NxAoJBhfR57tMsaGDYhFxQzRPCH/K7X30Hn5pFg4o="></script>
     <script src="assets/js/script.js"></script>
     <header>
         <div class="top-bar">
